--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -234,6 +234,7 @@ ol {
 		width: 340px !important;
 	}
 	.scblog-post-content {
+		font-family: Helvetica;
 		.scpost-title {
 			padding: 0 0.3em;
 			font-size: 30px;
@@ -241,11 +242,13 @@ ol {
 		}
 		.scpost-date {
 			padding: 0 0.5em;
-			font-size: 20px;
+			font-size: 17px;
 			font-weight: 200;
 		}
 		.scpost-description {
+			font-size: 18px;
 			padding: 1em 0.5em;
+			text-align: justify;
 		}
 	}
 }
