--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -86,7 +86,7 @@
 }
 
 a {
-  color: var(--accent);
+  color: var(--lighter);
   transition: 0.3s ease-in-out;
 
   &:hover,
@@ -233,20 +233,26 @@ ol {
   .scblog-post-content {
     font-family: Helvetica;
     .scpost-title {
-      font-family: Arial, Helvetica, sans-serif;
       padding: 0 0.3em;
       font-size: 30px;
       font-weight: bold;
     }
     .scpost-date {
+      font-family: "Trebuchet MS";
       padding: 0 0.5em;
-      font-size: 17px;
+      font-size: 16px;
       font-weight: 200;
     }
     .scpost-description {
-      font-size: 18px;
+      font-family: Helvetica;
+      font-size: 19px;
       padding: 1em 0.5em;
       text-align: justify;
+    }
+    .scpost-img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
@@ -254,6 +260,7 @@ ol {
   padding: 2rem 1rem;
   .scblog-post-content {
     width: 85vw;
+    text-align: justify;
   }
 }
 
@@ -268,10 +275,9 @@ ol {
   overflow: hidden;
   overflow-y: auto;
   opacity: 0;
-  background-color: var(--background-primary);
+  background-color: var(--background-primary) !important;
   transition: max-height 1.5s linear, opacity 1s linear;
 }
-
 .post-container::-webkit-scrollbar {
   width: 7px;
 }
