--- a/src/components/config/Learners_Manifesto.html
+++ b/src/components/config/Learners_Manifesto.html
@@ -8,9 +8,11 @@
   discovery.
 </p>
 <br /><br />
-<img
-  src="https://activeseniorsclub.co.uk/wp-content/uploads/2019/04/elderly-elderly-man-man-1684916.jpg"
-/>
+<div style="display: flex; justify-content: center; align-items: center">
+  <img
+    src="https://activeseniorsclub.co.uk/wp-content/uploads/2019/04/elderly-elderly-man-man-1684916.jpg"
+  />
+</div>
 <br /><br />
 <b>Curiosity is Paramount</b><br />
 Curiosity fuels our thirst for knowledge and drives us to explore the world
