--- a/src/components/config/Levels_Thinking.html
+++ b/src/components/config/Levels_Thinking.html
@@ -3,10 +3,13 @@
   primal to sophisticated. From basal instincts and thinking patterns to more
   holistic, integrated, and possibly mature way of thinking.
 </p>
+<p>This one makes a sequential sense if read from the bottom to top.</p>
 <br />
-<img
-  src="https://cdn.pixabay.com/photo/2014/09/13/10/17/escalator-443813_1280.jpg"
-/>
+<div style="display: flex; justify-content: center; align-items: center">
+  <img
+    src="https://cdn.pixabay.com/photo/2014/09/13/10/17/escalator-443813_1280.jpg"
+  />
+</div>
 <br /><br />
 <ul>
   <br />
