--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,16 +70,14 @@
   }
 
   #projects {
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
     // padding: 6rem 1.5rem;
-    transform: skewY(2deg);
-
+    // transform: skewY(2deg);
     .projects-container {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      transform: skewY(-2deg);
+      // transform: skewY(-2deg);
+      min-height: 30vh;
       h1 {
         color: inherit !important;
         font-size: 36px;
@@ -95,6 +93,143 @@
         align-items: center;
         margin-bottom: 1rem;
       }
+    }
+
+    .project-sections {
+      display: flex;
+      overflow-x: scroll;
+      overflow-y: hidden;
+      gap: 5rem;
+      padding: 1.5em 0 1.5em 0;
+    }
+    .snaps {
+      scroll-snap-type: x mandatory;
+    }
+    .snaps > * {
+      scroll-snap-align: start;
+    }
+    .project-sections::-webkit-scrollbar {
+      display: block !important;
+      width: 5px;
+    }
+    .project-sections::-webkit-scrollbar-track {
+      background: var(--background-secondary-alt);
+    }
+    .project-sections::-webkit-scrollbar-thumb {
+      background: var(--lighter);
+      border-radius: 8px;
+    }
+    .project-sections::-webkit-scrollbar-thumb:hover {
+      background: white;
+    }
+
+    .project-card {
+      background-color: var(--background-secondary);
+      border: 1px solid #aaa;
+      border-radius: 12px;
+      padding: 16px;
+      margin: 1em 2em 1em 2em;
+      text-align: left;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      min-width: 85vw;
+      // min-height: 70vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .project-card.expanded {
+      min-height: 200px;
+    }
+
+    .project-content {
+      display: flex;
+      align-items: flex-start;
+      gap: 16px;
+      flex-grow: 1;
+    }
+
+    .project-image {
+      flex-shrink: 0;
+      max-width: 100%;
+      transition: all 0.7s ease;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
+      margin: 0;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .project-card:hover {
+      border: 1px solid #ddd;
+      // transform: translateY(-2px);
+      // box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .project-name {
+      font-size: 1.2em;
+      margin-bottom: 12px;
+      color: var(--lighter);
+      font-weight: bold;
+    }
+
+    .project-card.expanded .project-image {
+      width: 70%;
+    }
+
+    .project-description {
+      flex: 1;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+
+    .project-stack {
+      flex: 1;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+
+    .project-card.expanded .project-description {
+      opacity: 1;
+    }
+
+    .project-buttons {
+      display: flex;
+      justify-content: left;
+      gap: 1em;
+      margin-top: 16px;
+      margin-bottom: 0;
+    }
+
+    .button {
+      text-decoration: none;
+      padding: 8px 16px;
+      font-size: 1em;
+      border-radius: 4px;
+      color: white;
+      background-color: #007bff;
+      transition: background-color 0.2s ease;
+    }
+
+    // .button:hover {
+    //   background-color: #0056b3;
+    // }
+
+    .github-button {
+      background-color: #6c757d;
+    }
+
+    .github-button:hover {
+      background-color: #5a6268;
+    }
+
+    .demo-button {
+      background-color: #28a745;
+    }
+
+    .demo-button:hover {
+      background-color: #218838;
     }
   }
 
