project section redesign

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,7 @@
     --background-primary: #0a0d14;
     --background-secondary: #141a29;
     --background-secondary-alt: #101628;
+    --background-secondary-altlight: #304072;
     --foreground-primary: #a8b5c3;
     --purple: #492dd5ec;
   }
@@ -20,6 +21,7 @@
     --background-primary: #cbd6f0;
     --background-secondary: #cbd6f0;
     --background-secondary-alt: #cbd6f0;
+    --background-secondary-altlight: #98b0e8;
     --foreground-primary: #141a29;
     --purple: #492dd5ec;
   }
