--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -125,7 +125,7 @@
 
     .project-card {
       background-color: var(--background-secondary);
-      border: 1px solid #aaa;
+      border: 1px solid var(--background-secondary-alt); //#aaa;
       border-radius: 12px;
       padding: 16px;
       margin: 1em 2em 1em 2em;
@@ -152,6 +152,7 @@
 
     .project-image {
       flex-shrink: 0;
+      width: 80vw;
       max-width: 100%;
       transition: all 0.7s ease;
       aspect-ratio: 16 / 9;
@@ -162,7 +163,7 @@
     }
 
     .project-card:hover {
-      border: 1px solid #ddd;
+      border: 1px solid var(--background-secondary-altlight);
       // transform: translateY(-2px);
       // box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
     }
@@ -186,11 +187,14 @@
 
     .project-stack {
       flex: 1;
-      opacity: 0;
+      opacity: 1;
       transition: opacity 0.5s ease;
     }
 
     .project-card.expanded .project-description {
+      opacity: 1;
+    }
+    .project-card.expanded .project-stack {
       opacity: 1;
     }
 
